Remove fxtrayicon dep